--- a/.github/workflows/OFOX.yml
+++ b/.github/workflows/OFOX.yml
@@ -41,7 +41,9 @@ jobs:
         swap-size-gb: 12
 
     - name: Build OrangeFox Recovery
-      uses: mlm-games/OrangeFox-Builder-Action@main 
+      uses: mlm-games/OrangeFox-Builder-Action@main
+      with: 
+        MANIFEST_BRANCH: '11.0'
         
     - name: Upload to Release
       uses: softprops/action-gh-release@v2
@@ -52,7 +54,7 @@ jobs:
           ${{ env.OUTPUT_DIR }}/OrangeFox*.tar
           ${{ env.OUTPUT_DIR }}/OrangeFox*.zip
           ${{ env.OUTPUT_DIR }}/*vbmeta*    
-          ${{ env.OUTPUT_DIR }}/ramdisk-recovery.*
+          ${{ env.OUTPUT_DIR }}/*.cpio
         name: Unofficial OrangeFox for ${{ env.DEVICE_NAME }} // ${{ format('{0:yyyyMMdd}', github.event.head_commit.timestamp) }}
         tag_name: ${{ github.run_id }}
         body: |
